--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 
 <div class="half-width">
     <h1>ABOUT ME</h1>
-    <h3>  I am a fresh Graduate. I am interested in the field of Web development. Now I am looking for opportunities. Here attached my Resume.</h3> <br>
-            <a  class="button-design" target="_blank"  href="https://www.linkedin.com/in/gaus-md-nafis-158535161/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAACazIZQBt1mIhHx8ChZKkQcG-PTBpVIwtns,1603460554049)/"> Download Resume</a>
+    <h3>  I am a fresh Graduate. I am interested in the field of Web development. Now I am looking for opportunities.   Here attached my Resume.</h3> <br>
+
+            <a  class="button-design"  target="_blank" href="./Nafis_Resume.pdf" download="Nafis_Resume"> Download Resume</a>
 </div>
  </section>
 
